ml_app/mlapp_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ml-app-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: ml_app
