ml_app/mlapp_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-app-ingress
  labels:
    app: ml_app
spec:
  rules:
  - host: irismodel.com
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: ml-app-svc
            port: 
              number: 80
